--- a/householdbudget/resources/views/listHouseholds.njk
+++ b/householdbudget/resources/views/listHouseholds.njk
@@ -1,4 +1,7 @@
 {% extends "parent.njk" %}
+{% block scripts %} 
+  <script src='/show.js'></script>
+{% endblock %}
 {% block content %}
 
 <table class="table table-striped table-inverse">
@@ -22,9 +25,28 @@
             <td>{{house.street}}</td>
             <td>{{house.number}}</td>
             <td><a href='/editAddress/{{house.id}}'>Szerkesztés</a></td>
-            <td><a href='/delete/{{house.id}}'>Törlés</a></td>
+            <td>
+              <form class="delete" action = "/deleteAdm/{{house.id}}" method="POST">
+                  {{ csrfField }}
+              <input class="btn btn-danger" type="submit" value="Törlés"/>
+              </form>
+            </td>
         </tr>
     {%endfor%}
   </tbody>
 </table>
+
+<div class="modal fade confirm-modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+        <div class="modal-body">
+            Biztosan törölni szeretnéd?
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-success modal-ok" data-dismiss="modal">OK</button>
+            <button type="button" class="btn btn-danger modal-cancel" data-dismiss="modal">Mégse</button>
+        </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
