--- a/householdbudget/resources/views/parent.njk
+++ b/householdbudget/resources/views/parent.njk
@@ -21,6 +21,9 @@
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
  <script src="/clock.js"></script>
+ {% if currentUser.id == 1111 %}
+     <script src='/search.js'></script>
+  {%endif%}
   {% block scripts %} {% endblock %}
   </head>
   <body>
@@ -59,6 +62,14 @@
               </ul>
             </div>
             <div id="clock" style="float:right; padding-top: 10px; padding-right:10px"></div>
+            <div style="float:right; padding-right:10px">
+              <form id="search" class="navbar-form navbar-left" action="/search" method="GET">
+                <div class="form-group">
+                  <input name="q" class="form-control" placeholder="Felhasználó keresés" autocomplete="off"/>
+                </div>
+                <div class="list-group user-suggestions suggestions"></div>
+              </form>
+            </div>
             {% else%}    
                <div style="float:right">
               <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">{{currentUser.lastname}} {{currentUser.firstname}}
