javítások és tesztek

--- a/householdbudget/resources/views/addressReg.njk
+++ b/householdbudget/resources/views/addressReg.njk
@@ -29,7 +29,7 @@
   <fieldset>
     <legend>Cím Regisztráció</legend>
     <div class="form-group">
-      <label for="inputZipCode" class="col-lg-2 control-label">Irányító szám</label>
+      <label for="inputZipCode" class="col-lg-2 control-label">Irányítószám</label>
       <div class="col-lg-10">
         <input type="number" class="form-control" id="inputZipCode" name="zip_code" value="{{ old('zip_code') }}" placeholder="Irányítószám">
       </div>
@@ -60,7 +60,7 @@
    
     <div class="form-group">
       <div class="col-lg-10 col-lg-offset-2">
-        <button type="submit" class="btn btn-primary">Regisztrálok!</button>
+        <button type="submit" class="btn btn-primary">Mentés!</button>
       </div>
     </div>
   </fieldset>
